--- a/APICentralAtendimento/CentralAtendimento/CentralAtendimento/Web.config
+++ b/APICentralAtendimento/CentralAtendimento/CentralAtendimento/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name ="APIDbCOntext" connectionString="Data Source=(local); Initial Catalog=CentralAtendimento; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-    <!--<add name="DefaultConnection" connectionString="Server=tcp:akira-testdb.database.windows.net,1433;Initial Catalog=TestingDb;Persist Security Info=False;User ID=akiravictor;Password=Akira1991;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Server=tcp:akira-testdb.database.windows.net,1433;Initial Catalog=TestingDb;Persist Security Info=False;User ID=akiravictor;Password=<<PASSWORD>>;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(local);AttachDbFilename=|DataDirectory|\aspnet-CentralClientes.mdf;Initial Catalog=CentralAtendimento;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
