--- a/APICentralAtendimento/CentralAtendimento/CentralAtendimento/bin/CentralAtendimento.dll.config
+++ b/APICentralAtendimento/CentralAtendimento/CentralAtendimento/bin/CentralAtendimento.dll.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name ="APIDbContext" connectionString="Data Source=(local); Initial Catalog=CentralAtendimento; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>-->
-    <add name="APIDbContext" connectionString="Server=tcp:akira-testdb.database.windows.net,1433;Initial Catalog=CentralAtendimento;Persist Security Info=False;User ID=akiravictor;Password=Akira1991;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name ="APIDbContext" connectionString="Data Source=(local); Initial Catalog=CentralAtendimento; Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
+    <!--<add name="APIDbContext" connectionString="Server=tcp:akira-testdb.database.windows.net,1433;Initial Catalog=CentralAtendimento;Persist Security Info=False;User ID=akiravictor;Password=Akira1991;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
     <!--<add name="APIDbContext" connectionString="Data Source=(local);AttachDbFilename=|DataDirectory|\aspnet-CentralClientes.mdf;Initial Catalog=CentralAtendimento;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
